fixed extra space

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 body {
   max-width: 1200px;
   width: 100%;
+  overflow-x: hidden;
 }
 
 header {
